--- a/style.css
+++ b/style.css
@@ -3,23 +3,38 @@
 body{
     font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
-.half-part h1 .name-highlite{
+section{
+    height: 500px;
+    width: 100%;
+    padding-bottom: 140px;
+}
+.top-banner{
+    background-image: url(./img/top-banner.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.orange-highlite{
     color: orange;
 }
-.half-part h1{
+ h1{
     font-size: 40px;
+}
+h2{
+    font-size: 35px;
 }
 .half-part{
     margin: 2rem 0.5rem;
-    padding: 0 1rem;
+    padding: 0 2rem;
     width: 40%;
     float: left;
 }
 .half-part img{
     width: 100%;
 }
-.half-part button{
+.half-part .link-button{
     padding: 0.7rem 1rem;
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -33,4 +48,38 @@ body{
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     cursor: pointer;
+    text-decoration: none;
+}
+p{
+    padding: 1rem 0;
+}
+.dream-area{
+    background-image: url(./img/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    margin-left: 2.5rem;
+    height: 300px;
+}
+.experence-area{
+    background-image: url(./img/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#pro-web-dev{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgb(255, 133, 133), rgb(255, 68, 35));
+    border-image-slice: 1;
+}
+#baby-web-dev{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgb(4, 0, 255), rgb(0, 195, 255));
+    border-image-slice: 1;
+}
+footer{
+    text-align: center;
+    padding: 1rem;
 }
